--- a/Check_Services.ipynb
+++ b/Check_Services.ipynb
@@ -1,37 +1,57 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c9658fa-7fe5-449e-8c7b-5304fe3dca7b",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "373a9d19-2d1a-43c0-9f2a-389b0d48fe75",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "#pip install aiohttp asyncssh\n",
+    "# Агент прикладного уровня для оценки качества сетевых сервисов (сетевая доступность, протокольная доступность, корректность авторизации, время отклика)\n",
     "\n",
-    "#$ nmap scanme.nmap.org\n",
-    "#Starting Nmap 7.80 ( https://nmap.org ) at 2023-02-12 10:16 UTC\n",
-    "#Nmap scan report for scanme.nmap.org (45.33.32.156)\n",
-    "#Host is up (0.19s latency).\n",
-    "#Other addresses for scanme.nmap.org (not scanned): 2600:3c01::f03c:91ff:fe18:bb2f\n",
-    "#Not shown: 993 closed ports\n",
-    "#PORT      STATE    SERVICE\n",
-    "#22/tcp    open     ssh\n",
-    "#53/tcp    open     domain\n",
-    "#80/tcp    open     http\n",
-    "#2323/tcp  filtered 3d-nfsd\n",
-    "#5555/tcp  filtered freeciv\n",
-    "#9929/tcp  open     nping-echo\n",
-    "#31337/tcp open     Elite\n"
+    "## По материалам: \n",
+    "## https://habr.com/ru/company/proto/blog/532152/\n",
+    "## https://www.dynatrace.com/platform/digital-experience/\n",
+    "## https://www.dynatrace.com/platform/oneagent/\n",
+    "## https://betterstack.com/community/comparisons/javascript-application-monitoring-tools/\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "id": "0c9658fa-7fe5-449e-8c7b-5304fe3dca7b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#pip install aiohttp asyncssh\n",
+    "\n",
+    "# nmap scanme.nmap.org\n",
+    "# Starting Nmap 7.80 ( https://nmap.org ) at 2023-02-12 10:16 UTC\n",
+    "# Nmap scan report for scanme.nmap.org (45.33.32.156)\n",
+    "# Host is up (0.19s latency).\n",
+    "# Other addresses for scanme.nmap.org (not scanned): 2600:3c01::f03c:91ff:fe18:bb2f\n",
+    "# Not shown: 993 closed ports\n",
+    "# PORT      STATE    SERVICE\n",
+    "# 22/tcp    open     ssh\n",
+    "# 53/tcp    open     domain\n",
+    "# 80/tcp    open     http\n",
+    "# 2323/tcp  filtered 3d-nfsd\n",
+    "# 5555/tcp  filtered freeciv\n",
+    "# 9929/tcp  open     nping-echo\n",
+    "# 31337/tcp open     Elite\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "967881f2-94f5-4124-8ba5-a0209c9db4b6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "import asyncio\n",
     "import asyncssh\n",
     "import aiohttp\n",
@@ -41,7 +61,6 @@
     "\n",
     "async def site_is_online_async(url, timeout):\n",
     "    \"\"\"Return True if the target URL is online.\n",
-    "\n",
     "    Raise an exception otherwise.\n",
     "    \"\"\"\n",
     "    error = Exception(\"unknown scheme\")\n",
@@ -143,11 +162,11 @@
     "                \n",
     "    raise error\n",
     "    \n",
-    "def display_check_result(result, url, error=\"\"):\n",
+    "def display_check_result(lathency_ns, url, error=\"\"):\n",
     "    \"\"\"Display the result of a connectivity check.\"\"\"\n",
     "    print(f'The status of \"{url}\" is:', end=\" \")\n",
-    "    if result:\n",
-    "        print('\"Online!\" 👍')\n",
+    "    if (lathency_ns):\n",
+    "        print(f'\"Online!\" 👍, lathency: {lathency_ns*10e-9}s')\n",
     "    else:\n",
     "        print(f'\"Offline?\" 👎 \\n  Error: \"{error}\"')\n",
     "\n",
@@ -155,12 +174,14 @@
     "async def _asynchronous_check(urls,timeout):\n",
     "    async def _check(url,timeout):\n",
     "        error = \"\"\n",
+    "        startTime = time.time_ns()\n",
     "        try:\n",
-    "            result = await site_is_online_async(url,timeout)\n",
+    "            await site_is_online_async(url,timeout)\n",
+    "            lathency = time.time_ns() - startTime\n",
     "        except Exception as e:\n",
-    "            result = False\n",
+    "            lathency = None\n",
     "            error = str(e)\n",
-    "        display_check_result(result, url, error)\n",
+    "        display_check_result(lathency, url,error)\n",
     "\n",
     "    await asyncio.gather(*(_check(url,timeout) for url in urls))\n",
     "\n",
@@ -205,66 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "66bbf506-df71-4585-a67b-a310fa777727",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Async event loop already running. Adding coroutine to the event loop.\n",
-      "The status of \"kafka://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9092), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"https://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Cannot connect to host scanme.nmap.org:443 ssl:False [Connect call failed ('45.33.32.156', 443)]\"\n",
-      "The status of \"http://scanme.nmap.org:8080\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Cannot connect to host scanme.nmap.org:8080 ssl:False [Connect call failed ('45.33.32.156', 8080)]\"\n",
-      "The status of \"kafka://scanme.nmap.org:9093\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9093), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"postgre://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5432), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"kafka://scanme.nmap.org:9092\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 9092), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"https://scanme.nmap.org:443\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Cannot connect to host scanme.nmap.org:443 ssl:False [Connect call failed ('45.33.32.156', 443)]\"\n",
-      "The status of \"ssh://scanme.nmap.org:2222\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 2222), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍\n",
-      "The status of \"http://scanme.nmap.org:80\" is: \"Online!\" 👍\n",
-      "The status of \"http://scanme.nmap.org/\" is: \"Online!\" 👍\n",
-      "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Permission denied\"\n",
-      "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Permission denied\"\n",
-      "The status of \"ssh://scanme.nmap.org:22\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Permission denied\"\n",
-      "Task done with result=None  << return val of main()\n"
-     ]
-    }
-   ],
-   "source": [
-    "check(timeout=15, urls=[\"kafka://scanme.nmap.org\",\n",
-    "                       \"kafka://scanme.nmap.org:9092\",\n",
-    "                       \"kafka://scanme.nmap.org:9093\",\n",
-    "                       \"postgre://scanme.nmap.org\",\n",
-    "                       \"http://scanme.nmap.org\",\n",
-    "                       \"http://scanme.nmap.org/\",\n",
-    "                       \"http://scanme.nmap.org:80\",\n",
-    "                       \"http://scanme.nmap.org:8080\",\n",
-    "                       \"https://scanme.nmap.org\",\n",
-    "                       \"https://scanme.nmap.org:443\",\n",
-    "                       \"ssh://scanme.nmap.org\",\n",
-    "                       \"ssh://scanme.nmap.org\",\n",
-    "                       \"ssh://scanme.nmap.org:22\",\n",
-    "                       \"ssh://scanme.nmap.org:2222\"\n",
-    "                      ]\n",
-    "     )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "aaf9f4e5-01cf-4c0f-bec5-60712092e589",
    "metadata": {},
    "outputs": [
@@ -273,11 +235,14 @@
      "output_type": "stream",
      "text": [
       "Async event loop already running. Adding coroutine to the event loop.\n",
-      "The status of \"raw://scanme.nmap.org:53\" is: \"Online!\" 👍\n",
-      "The status of \"raw://scanme.nmap.org:22\" is: \"Online!\" 👍\n",
-      "The status of \"raw://scanme.nmap.org:80\" is: \"Online!\" 👍\n",
-      "The status of \"raw://scanme.nmap.org:31337\" is: \"Online!\" 👍\n",
-      "The status of \"raw://scanme.nmap.org:9929\" is: \"Online!\" 👍\n",
+      "The status of \"raw://scanme.nmap.org:53\" is: \"Online!\" 👍, lathency: 0.56200541s\n",
+      "The status of \"raw://scanme.nmap.org:80\" is: \"Online!\" 👍, lathency: 2.57281458s\n",
+      "The status of \"raw://scanme.nmap.org:9929\" is: \"Online!\" 👍, lathency: 2.56837542s\n",
+      "The status of \"raw://scanme.nmap.org:22\" is: \"Online!\" 👍, lathency: 2.58969291s\n",
+      "The status of \"raw://scanme.nmap.org:31337\" is: \"Online!\" 👍, lathency: 2.61470792s\n",
+      "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍, lathency: 4.68732917s\n",
+      "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Permission denied\"\n",
       "The status of \"raw://scanme.nmap.org:5555\" is: \"Offline?\" 👎 \n",
       "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5555), [Errno 99] Cannot assign requested address\"\n",
       "The status of \"raw://scanme.nmap.org:2323\" is: \"Offline?\" 👎 \n",
@@ -287,14 +252,15 @@
     }
    ],
    "source": [
-    "check(timeout=15, urls=[\n",
-    "                        \"raw://scanme.nmap.org:22\",#22/tcp    open     ssh\n",
-    "                        \"raw://scanme.nmap.org:53\",#53/tcp    open     domain\n",
-    "                        \"raw://scanme.nmap.org:80\",#80/tcp    open     http\n",
-    "                        \"raw://scanme.nmap.org:2323\",#2323/tcp  filtered 3d-nfsd\n",
-    "                        \"raw://scanme.nmap.org:5555\",#5555/tcp  filtered freeciv\n",
-    "                        \"raw://scanme.nmap.org:9929\",#9929/tcp  open     nping-echo\n",
-    "                        \"raw://scanme.nmap.org:31337\"#31337/tcp open     Elite\n",
+    "check(timeout=15, urls=[\"http://scanme.nmap.org\",     # HTTP via aiohttp \n",
+    "                        \"ssh://scanme.nmap.org\",      # SSH via asyncssh \n",
+    "                        \"raw://scanme.nmap.org:22\",   # RAW 22/tcp    open     ssh\n",
+    "                        \"raw://scanme.nmap.org:53\",   # RAW 53/tcp    open     domain\n",
+    "                        \"raw://scanme.nmap.org:80\",   # RAW 80/tcp    open     http\n",
+    "                        \"raw://scanme.nmap.org:2323\", # RAW 2323/tcp  filtered 3d-nfsd\n",
+    "                        \"raw://scanme.nmap.org:5555\", # RAW 5555/tcp  filtered freeciv\n",
+    "                        \"raw://scanme.nmap.org:9929\", # RAW 9929/tcp  open     nping-echo\n",
+    "                        \"raw://scanme.nmap.org:31337\" # RAW 31337/tcp open     Elite\n",
     "                       ]\n",
     "     )"
    ]
@@ -302,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afa42899-9f1f-4bf9-b7a3-80782bc79f5e",
+   "id": "37b0f4da-a5d4-47e2-8799-19104808bae0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -310,21 +276,11 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "",
+   "name": ""
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "name": ""
   }
  },
  "nbformat": 4,
