--- a/Check_Services.ipynb
+++ b/Check_Services.ipynb
@@ -162,11 +162,11 @@
     "                \n",
     "    raise error\n",
     "    \n",
-    "def display_check_result(lathency_ns, url, error=\"\"):\n",
+    "def display_check_result(latency_ns, url, error=\"\"):\n",
     "    \"\"\"Display the result of a connectivity check.\"\"\"\n",
     "    print(f'The status of \"{url}\" is:', end=\" \")\n",
-    "    if (lathency_ns):\n",
-    "        print(f'\"Online!\" 👍, lathency: {lathency_ns*10e-9}s')\n",
+    "    if (latency_ns):\n",
+    "        print(f'\"Online!\" 👍, latency: {latency_ns*10e-9}s')\n",
     "    else:\n",
     "        print(f'\"Offline?\" 👎 \\n  Error: \"{error}\"')\n",
     "\n",
@@ -177,11 +177,11 @@
     "        startTime = time.time_ns()\n",
     "        try:\n",
     "            await site_is_online_async(url,timeout)\n",
-    "            lathency = time.time_ns() - startTime\n",
+    "            latency = time.time_ns() - startTime\n",
     "        except Exception as e:\n",
-    "            lathency = None\n",
+    "            latency = None\n",
     "            error = str(e)\n",
-    "        display_check_result(lathency, url,error)\n",
+    "        display_check_result(latency, url,error)\n",
     "\n",
     "    await asyncio.gather(*(_check(url,timeout) for url in urls))\n",
     "\n",
@@ -213,8 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Async event loop already running. Adding coroutine to the event loop.\n",
-      "Task done with result=None  << return val of main()\n"
+      "Async event loop already running. Adding coroutine to the event loop.\n"
      ]
     }
    ],
@@ -234,19 +233,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Task done with result=None  << return val of main()\n",
       "Async event loop already running. Adding coroutine to the event loop.\n",
-      "The status of \"raw://scanme.nmap.org:53\" is: \"Online!\" 👍, lathency: 0.56200541s\n",
-      "The status of \"raw://scanme.nmap.org:80\" is: \"Online!\" 👍, lathency: 2.57281458s\n",
-      "The status of \"raw://scanme.nmap.org:9929\" is: \"Online!\" 👍, lathency: 2.56837542s\n",
-      "The status of \"raw://scanme.nmap.org:22\" is: \"Online!\" 👍, lathency: 2.58969291s\n",
-      "The status of \"raw://scanme.nmap.org:31337\" is: \"Online!\" 👍, lathency: 2.61470792s\n",
-      "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍, lathency: 4.68732917s\n",
+      "The status of \"raw://scanme.nmap.org:53\" is: \"Online!\" 👍, latency: 0.31663s\n",
+      "The status of \"raw://scanme.nmap.org:22\" is: \"Online!\" 👍, latency: 2.13678s\n",
+      "The status of \"raw://scanme.nmap.org:9929\" is: \"Online!\" 👍, latency: 2.1618575s\n",
+      "The status of \"raw://scanme.nmap.org:31337\" is: \"Online!\" 👍, latency: 2.2523925s\n",
+      "The status of \"raw://scanme.nmap.org:80\" is: \"Online!\" 👍, latency: 2.37294833s\n",
+      "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍, latency: 4.04143084s\n",
       "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
       "  Error: \"Permission denied\"\n",
-      "The status of \"raw://scanme.nmap.org:5555\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5555), [Errno 99] Cannot assign requested address\"\n",
       "The status of \"raw://scanme.nmap.org:2323\" is: \"Offline?\" 👎 \n",
       "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 2323), [Errno 99] Cannot assign requested address\"\n",
+      "The status of \"raw://scanme.nmap.org:5555\" is: \"Offline?\" 👎 \n",
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5555), [Errno 99] Cannot assign requested address\"\n",
       "Task done with result=None  << return val of main()\n"
      ]
     }
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37b0f4da-a5d4-47e2-8799-19104808bae0",
+   "id": "20c95663-8422-46bc-a3b9-d34774f748fe",
    "metadata": {},
    "outputs": [],
    "source": []
