--- a/Check_Services.ipynb
+++ b/Check_Services.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "967881f2-94f5-4124-8ba5-a0209c9db4b6",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
     "from urllib.parse import urlparse\n",
     "\n",
     "\n",
-    "async def site_is_online_async(url, timeout):\n",
+    "async def site_is_online_async(url, timeout,username,password):\n",
     "    \"\"\"Return True if the target URL is online.\n",
     "    Raise an exception otherwise.\n",
     "    \"\"\"\n",
@@ -89,7 +89,7 @@
     "        #print(host,port)\n",
     "        \n",
     "        try:\n",
-    "            async with await asyncio.wait_for(asyncssh.connect(host=host,port=port,username=\"test\", password=\"test\", known_hosts=None), timeout=timeout) as conn:\n",
+    "            async with await asyncio.wait_for(asyncssh.connect(host=host,port=port,username=username, password=password, known_hosts=None), timeout=timeout) as conn:\n",
     "                print((await conn.run('tty', term_type='ansi')).stdout, end='')\n",
     "                return True\n",
     "        except asyncio.TimeoutError:\n",
@@ -171,61 +171,85 @@
     "        print(f'\"Offline?\" 👎 \\n  Error: \"{error}\"')\n",
     "\n",
     "\n",
-    "async def _asynchronous_check(urls,timeout):\n",
-    "    async def _check(url,timeout):\n",
+    "async def _asynchronous_check(urls,timeout,username,password):\n",
+    "    async def _check(url,timeout,username,password):\n",
     "        error = \"\"\n",
     "        startTime = time.time_ns()\n",
     "        try:\n",
-    "            await site_is_online_async(url,timeout)\n",
+    "            await site_is_online_async(url,timeout,username,password)\n",
     "            latency = time.time_ns() - startTime\n",
     "        except Exception as e:\n",
     "            latency = None\n",
     "            error = str(e)\n",
     "        display_check_result(latency, url,error)\n",
     "\n",
-    "    await asyncio.gather(*(_check(url,timeout) for url in urls))\n",
+    "    await asyncio.gather(*(_check(url,timeout,username,password) for url in urls))\n",
     "\n",
-    "def check(urls,timeout=5):\n",
+    "def check(urls,timeout,username,password):\n",
     "    try:\n",
     "        loop = asyncio.get_running_loop()\n",
     "    except RuntimeError:  # 'RuntimeError: There is no current event loop...'\n",
     "        loop = None\n",
     "\n",
     "    if loop and loop.is_running():\n",
-    "        print('Async event loop already running. Adding coroutine to the event loop.')\n",
-    "        tsk = loop.create_task(_asynchronous_check(urls,timeout))\n",
+    "        #print('Async event loop already running. Adding coroutine to the event loop.')\n",
+    "        tsk = loop.create_task(_asynchronous_check(urls,timeout,username,password))\n",
     "        # ^-- https://docs.python.org/3/library/asyncio-task.html#task-object\n",
     "        # Optionally, a callback function can be executed when the coroutine completes\n",
-    "        tsk.add_done_callback(\n",
-    "            lambda t: print(f'Task done with result={t.result()}  << return val of main()'))\n",
+    "        #tsk.add_done_callback(\n",
+    "        #    lambda t: print(f'Task done with result={t.result()}  << return val of main()'))\n",
     "    else:\n",
     "        print('Starting new event loop')\n",
-    "        result = asyncio.run(_asynchronous_check(urls,timeout))\n"
+    "        result = asyncio.run(_asynchronous_check(urls,timeout,username,password))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "7f9bbdd1-7808-4d7a-b195-a59680cc1cca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Async event loop already running. Adding coroutine to the event loop.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "time.sleep(1)\n",
-    "check(timeout=3,urls=[])"
+    "check(timeout=3,urls=[],username='',password='')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
+   "id": "8249ff0b-fe65-4609-a23b-5e143bd04b40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "81d5ed7263114032befba2b056c56d00",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='', description='User:', placeholder='Введите здесь имя Ext-....'), Password(descrip…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets\n",
+    "username = ipywidgets.Text(description='User:', placeholder='Введите здесь имя Ext-....')\n",
+    "password = ipywidgets.Password(description='Password:', placeholder='Введите здесь пароль')\n",
+    "\n",
+    "display(widgets.VBox([\n",
+    "username,\n",
+    "password\n",
+    "]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "aaf9f4e5-01cf-4c0f-bec5-60712092e589",
    "metadata": {},
    "outputs": [
@@ -233,21 +257,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task done with result=None  << return val of main()\n",
-      "Async event loop already running. Adding coroutine to the event loop.\n",
-      "The status of \"raw://scanme.nmap.org:53\" is: \"Online!\" 👍, latency: 0.31663s\n",
-      "The status of \"raw://scanme.nmap.org:22\" is: \"Online!\" 👍, latency: 2.13678s\n",
-      "The status of \"raw://scanme.nmap.org:9929\" is: \"Online!\" 👍, latency: 2.1618575s\n",
-      "The status of \"raw://scanme.nmap.org:31337\" is: \"Online!\" 👍, latency: 2.2523925s\n",
-      "The status of \"raw://scanme.nmap.org:80\" is: \"Online!\" 👍, latency: 2.37294833s\n",
-      "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍, latency: 4.04143084s\n",
+      "The status of \"raw://scanme.nmap.org:53\" is: \"Online!\" 👍, latency: 0.37227833s\n",
+      "The status of \"raw://scanme.nmap.org:9929\" is: \"Online!\" 👍, latency: 2.23024375s\n",
+      "The status of \"raw://scanme.nmap.org:80\" is: \"Online!\" 👍, latency: 2.26852126s\n",
+      "The status of \"raw://scanme.nmap.org:22\" is: \"Online!\" 👍, latency: 2.27033125s\n",
+      "The status of \"raw://scanme.nmap.org:31337\" is: \"Online!\" 👍, latency: 2.27119959s\n",
+      "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍, latency: 4.47656751s\n",
       "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
       "  Error: \"Permission denied\"\n",
       "The status of \"raw://scanme.nmap.org:2323\" is: \"Offline?\" 👎 \n",
       "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 2323), [Errno 99] Cannot assign requested address\"\n",
       "The status of \"raw://scanme.nmap.org:5555\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5555), [Errno 99] Cannot assign requested address\"\n",
-      "Task done with result=None  << return val of main()\n"
+      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5555), [Errno 99] Cannot assign requested address\"\n"
      ]
     }
    ],
@@ -261,26 +282,28 @@
     "                        \"raw://scanme.nmap.org:5555\", # RAW 5555/tcp  filtered freeciv\n",
     "                        \"raw://scanme.nmap.org:9929\", # RAW 9929/tcp  open     nping-echo\n",
     "                        \"raw://scanme.nmap.org:31337\" # RAW 31337/tcp open     Elite\n",
-    "                       ]\n",
-    "     )"
+    "                       ],\n",
+    "     username=username.value,password=password.value)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20c95663-8422-46bc-a3b9-d34774f748fe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
