--- a/Check_Services.ipynb
+++ b/Check_Services.ipynb
@@ -46,10 +46,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 79,
    "id": "967881f2-94f5-4124-8ba5-a0209c9db4b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9f73804d3ad14af4a96c65120007c4cb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='', description='User:', placeholder='Введите здесь имя Ext-....'), Password(descrip…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8aa5457fe9614ab8b61611fc17b8c2e3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Start tracing!', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c2e751df11b48be816c8a27765b3716",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import time\n",
     "import asyncio\n",
@@ -200,56 +243,38 @@
     "        #    lambda t: print(f'Task done with result={t.result()}  << return val of main()'))\n",
     "    else:\n",
     "        print('Starting new event loop')\n",
-    "        result = asyncio.run(_asynchronous_check(urls,timeout,username,password))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "7f9bbdd1-7808-4d7a-b195-a59680cc1cca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "time.sleep(1)\n",
-    "check(timeout=3,urls=[],username='',password='')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "8249ff0b-fe65-4609-a23b-5e143bd04b40",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81d5ed7263114032befba2b056c56d00",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Text(value='', description='User:', placeholder='Введите здесь имя Ext-....'), Password(descrip…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "        result = asyncio.run(_asynchronous_check(urls,timeout,username,password))\n",
+    "        \n",
+    "        \n",
     "import ipywidgets\n",
     "username = ipywidgets.Text(description='User:', placeholder='Введите здесь имя Ext-....')\n",
     "password = ipywidgets.Password(description='Password:', placeholder='Введите здесь пароль')\n",
+    "button = widgets.Button(description=\"Start tracing!\")\n",
+    "output = widgets.Output()\n",
     "\n",
-    "display(widgets.VBox([\n",
-    "username,\n",
-    "password\n",
-    "]))\n"
+    "def on_button_clicked(b):\n",
+    "    with output:\n",
+    "        output.append_stdout('!!!!')\n",
+    "        check(timeout=15, urls=[\"http://scanme.nmap.org\",     # HTTP via aiohttp \n",
+    "                                \"ssh://scanme.nmap.org\",      # SSH via asyncssh \n",
+    "                                \"raw://scanme.nmap.org:22\",   # RAW 22/tcp    open     ssh\n",
+    "                                \"raw://scanme.nmap.org:53\",   # RAW 53/tcp    open     domain\n",
+    "                                \"raw://scanme.nmap.org:80\",   # RAW 80/tcp    open     http\n",
+    "                                \"raw://scanme.nmap.org:2323\", # RAW 2323/tcp  filtered 3d-nfsd\n",
+    "                                \"raw://scanme.nmap.org:5555\", # RAW 5555/tcp  filtered freeciv\n",
+    "                                \"raw://scanme.nmap.org:9929\", # RAW 9929/tcp  open     nping-echo\n",
+    "                                \"raw://scanme.nmap.org:31337\" # RAW 31337/tcp open     Elite\n",
+    "                               ],\n",
+    "             username=username.value,password=password.value)        \n",
+    "\n",
+    "button.on_click(on_button_clicked)\n",
+    "\n",
+    "display(widgets.VBox([username,password]),button,output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "id": "aaf9f4e5-01cf-4c0f-bec5-60712092e589",
    "metadata": {},
    "outputs": [
@@ -257,12 +282,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The status of \"raw://scanme.nmap.org:53\" is: \"Online!\" 👍, latency: 0.37227833s\n",
-      "The status of \"raw://scanme.nmap.org:9929\" is: \"Online!\" 👍, latency: 2.23024375s\n",
-      "The status of \"raw://scanme.nmap.org:80\" is: \"Online!\" 👍, latency: 2.26852126s\n",
-      "The status of \"raw://scanme.nmap.org:22\" is: \"Online!\" 👍, latency: 2.27033125s\n",
-      "The status of \"raw://scanme.nmap.org:31337\" is: \"Online!\" 👍, latency: 2.27119959s\n",
-      "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍, latency: 4.47656751s\n",
+      "The status of \"raw://scanme.nmap.org:53\" is: \"Online!\" 👍, latency: 1.6971295800000001s\n",
+      "The status of \"raw://scanme.nmap.org:22\" is: \"Online!\" 👍, latency: 3.58058042s\n",
+      "The status of \"raw://scanme.nmap.org:80\" is: \"Online!\" 👍, latency: 3.6086375s\n",
+      "The status of \"raw://scanme.nmap.org:31337\" is: \"Online!\" 👍, latency: 3.68452459s\n",
+      "The status of \"raw://scanme.nmap.org:9929\" is: \"Online!\" 👍, latency: 3.686105s\n",
+      "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍, latency: 4.32768417s\n",
       "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
       "  Error: \"Permission denied\"\n",
       "The status of \"raw://scanme.nmap.org:2323\" is: \"Offline?\" 👎 \n",
@@ -272,18 +297,18 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "7f9bbdd1-7808-4d7a-b195-a59680cc1cca",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "check(timeout=15, urls=[\"http://scanme.nmap.org\",     # HTTP via aiohttp \n",
-    "                        \"ssh://scanme.nmap.org\",      # SSH via asyncssh \n",
-    "                        \"raw://scanme.nmap.org:22\",   # RAW 22/tcp    open     ssh\n",
-    "                        \"raw://scanme.nmap.org:53\",   # RAW 53/tcp    open     domain\n",
-    "                        \"raw://scanme.nmap.org:80\",   # RAW 80/tcp    open     http\n",
-    "                        \"raw://scanme.nmap.org:2323\", # RAW 2323/tcp  filtered 3d-nfsd\n",
-    "                        \"raw://scanme.nmap.org:5555\", # RAW 5555/tcp  filtered freeciv\n",
-    "                        \"raw://scanme.nmap.org:9929\", # RAW 9929/tcp  open     nping-echo\n",
-    "                        \"raw://scanme.nmap.org:31337\" # RAW 31337/tcp open     Elite\n",
-    "                       ],\n",
-    "     username=username.value,password=password.value)"
+    "import time\n",
+    "time.sleep(1)\n",
+    "check(timeout=3,urls=[],username='',password='')"
    ]
   }
  ],
